<resources>
    <string name="app_name">List It</string>
    <string name="create_a_new_list">Create a new List</string>
    <string name="add">ADD</string>
    <string name="enter_task">Enter Item</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="enter_title_of_your_list">Enter title of your List</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
</resources>