<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:background="@color/barca_indigo"
              android:layout_gravity="center">


    <EditText
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center_horizontal"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="@color/barca_pink"
            android:textColorHint="@android:color/darker_gray"
            android:hint="@string/enter_title_of_your_list"
            android:ems="10"
            android:textSize="22sp"
            android:id="@+id/list_title" android:importantForAutofill="no" tools:targetApi="o"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

        <Button
                android:text="@string/cancel"
                android:textSize="22sp"
                android:background="@drawable/button_style"
                android:textColor="@color/barca_pink"
                android:layout_width="125sp"
                android:layout_height="wrap_content" android:id="@+id/cancel_btn" android:layout_weight="1"
                tools:ignore="ButtonStyle"/>
        <Button
                android:text="@string/save"
                android:background="@drawable/button_style"
                android:textColor="@color/barca_pink"
                android:layout_width="125sp"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:id="@+id/save_btn"
                android:layout_weight="1" tools:ignore="ButtonStyle"/>
    </LinearLayout>
</LinearLayout>